sandc/test/fixtures/astRegression/shouldFail/productions/nonInlineInstanceofGuardVariableDeclaration/NonInstanceofTypeVariableAnnotation.sand
pub class NonInstanceofTypeVariableAnnotation {
    foo() {
        if let x: Foo<Bar> = y {

        }
    }
}